[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/RepeatChoice/repeat-choice.gd" type="Script" id=1]
[ext_resource path="res://Shared/Fonts/jelle-bold-26.tres" type="DynamicFont" id=2]

[node name="RepeatChoice" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 824.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.541176, 0, 0.392157, 1 )
text = "Do you want to repeat this section?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 824.0
margin_bottom = 256.0
custom_constants/separation = 60
alignment = 1

[node name="ButtonProceed" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 382.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_constants/hseparation = 0
text = "Move on"

[node name="ButtonRepeat" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_right = 824.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Repeat the section"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonProceed" to="." method="_on_ButtonProceed_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonRepeat" to="." method="_on_ButtonRepeat_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
